# api

./: .env-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.app  Dockerfile.deps  Makefile  README.md  build.rs  config.toml  docker-compose.yml  new_auth.md
.github/workflows/: deploy.yaml  local_build.yaml  test.yaml
blockjoy/v1/: blockchain.proto  (+1 more)
blockvisor-api/: Cargo.toml  build.rs  config.toml
casbin_authorization/: Cargo.toml  README.md
casbin_authorization/casbin_macros/: Cargo.toml
casbin_authorization/casbin_macros/src/: expand.rs  lib.rs
casbin_authorization/src/: auth.rs
conf/: abac.conf  policies.csv
deploy/: deployment.yml
docker/: docker-compose.yaml
mails/: invite_user.toml
migrations/: 20220609103805_add-groups.down.sql  20220609103805_add-groups.up.sql  20220904160218_update_enum_host_cmd.up.sql  20220913103902_multiple-tokens-per-user.up.sql  20221203160314_add_node_types_table.down.sql  20221203160314_add_node_types_table.up.sql
src/: action.rs  auth.rs  cloudflare.rs  cookbook.rs  database.rs  emqx_api.rs  error.rs  errors.rs  firewall.rs  lib.rs  mail.rs  main.rs  multiplex.rs  server.rs
tests/: cloudflare_api.rs  db_token.rs  grpc_command_service.rs  grpc_hosts_service.rs  grpc_nodes_service.rs  grpc_organization_service.rs  grpc_ui_blockchain_service.rs  grpc_ui_host_provision_service.rs  grpc_ui_host_service.rs  grpc_ui_hostprovision_service.rs  grpc_ui_invitation_service.rs  grpc_ui_node_service.rs  invitations.rs  it.rs  node.rs  privileges.rs  routing.rs  token.rs  user.rs
v1/: host.proto  invitation.proto
(+318 files in other folders)
